fix: background transparency lowered to help contrast with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 /* ------------- Back Panel ------------- */
 
 .back-panel {
-  background-color: rgba(255, 255, 255, 0.247);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 150px;
   padding: 20px;
   width: 90%;
